[metadata]
name = mailchecker
author = Mikolaj Niedbala
author-email = metatron@metatron.com.pl
summary = Simple library for existence of email checking
description = Simple library for existence of email checking
version = 1.2
home-page = https://dev.metatron.com.pl/
license = GNU Library or Lesser General Public License (LGPL)
classifier =
    Programming Language :: Python,
    Programming Language :: Python :: 2,
    Development Status :: 4 - Beta,
    Environment :: Other Environment,
    Intended Audience :: Sysadmins,
    License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL),
    Operating System :: Unix / Linux,
keywords =
    email
    mail
    telnet

[files]
packages = mailchecker

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0
